# PharmaPy

./: .gitignore  INSTALLATION.md  InstallOnMac.sh  InstallOnWindows.bat  MANIFEST.in  Makefile  README.md  SETUP_MODERNIZATION.md  TESTING.md  environment.yml  install_instructions.txt  make.bat  pyproject.toml  pytest.ini  requirements-assimulo.txt  requirements-conda.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  run_tests.bat  run_tests.py  run_tests_pytest.py  setup.cfg  setup.py  test_discovery.py  validate_from_ci.py  validate_local.py
.github/: README.md
.github/workflows/: ci.yml  comprehensive-testing.yml  consolidated-ci.yml  installation-tests.yml  test.yml
PharmaPy/: Calibration.py  CheckModule.py  Commons.py  Connections.py  Containers.py  Crystallizers.py  Distillation.py  Drying_Model.py  DynamicExtraction.py  Errors.py  Evaporators.py  Extractors.py  Gaussians.py  Interpolation.py  Kinetics.py  LevMarq.py  MetaModeler.py  MixedPhases.py  NameAnalysis.py  ParamEstim.py  Phases.py  Plotting.py  ProcessControl.py  Reactors.py  Results.py  SimExec.py  SolidLiquidSep.py  StatsModule.py  Streams.py  ThermoModule.py  ThreePhaseSettler.py  Utilities.py  animate_profiles.py  general_interpolation.py  jac_module.py
PharmaPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doc/: Makefile
doc/online_docs/: conf.py  general_features.rst  index.rst  simulation_executive.rst
doc/online_docs/examples/: PFR_Batch_solved.ipynb  index.rst  param_estimation_solved.ipynb
doc/online_docs/examples/img/: placeholder.txt
docs/: requirements-guide.md
tests/: conftest.py
tests/Flowsheet/: flowsheet_tests.py
tests/integration/: reactor_tests.py  test_assimulo.py
tests/unit/: test_core.py
