[metadata]
name = PharmaPy
version = 0.0.1
author = Daniel Casas-Orozco
author_email = dcasasor@purdue.edu
description = PharmaPy: Dynamic simulation of pharmaceutical manufacturing systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SECQUOIA/PharmaPy
project_urls =
    Bug Tracker = https://github.com/SECQUOIA/PharmaPy/issues
    Documentation = https://pharmapy.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Chemistry
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
include = PharmaPy*
exclude = tests*

[options.extras_require]
dev = 
    pytest>=6.0
    pytest-cov
    sphinx
    sphinx-rtd-theme
    black
    flake8
    isort
    build
    twine
test = 
    pytest>=6.0
    pytest-cov
docs = 
    sphinx
    sphinx-rtd-theme

[options.package_data]
PharmaPy = data/**/*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .env

[coverage:run]
source = PharmaPy
omit = 
    */tests/*
    */test_*
    setup.py
